Correct form input sizes and create notification settings page.
Fix issue regarding radio button padding on medium sized devices.
Restore padding to form elements that overlapped.
Fix setting pages IDs
Create notification settings page.

--- a/site/src/styles/layout.scss
+++ b/site/src/styles/layout.scss
@@ -123,6 +123,15 @@ div.ui-slider-switch {
   margin-right: 7.5%;
 }
 
+.wide-slider{
+  // Widens slider handles. Unused at the moment
+  a.ui-slider-handle {
+  height: 31px;
+  top: 40%;
+  width: 45px;
+  }
+}
+
 [data-role=dialog] {
   form.ui-content {
     padding-top: 0;
@@ -149,14 +158,13 @@ div.ui-slider-switch {
   [data-role=controlgroup] {
     .ui-btn-inner {
       // Narrow radio group buttons
-      padding-left: 8px;
-      padding-right: 12px;
+      padding: 0.7em 14px;
     }
   }
   form.content {
     .ui-field-contain { 
       // Reduce the vert padding on mobile-view forms
-      padding: 5px 0;
+      padding: 7px 0;
     }
     
     label, .ui-controlgroup-label {
@@ -171,7 +179,6 @@ div.ui-slider-switch {
       
       &.ui-slider {
         display: block;
-        margin-bottom: -3px;
       }
     }
   }
@@ -193,4 +200,8 @@ div.ui-slider-switch {
       text-indent: -9999px;
     }
   }
+  .ui-btn-inner {
+    // Narrow radio group buttons. Corrects large to medium devices
+    padding: 0.7em 14px;  
+    }
 }
